# webdev_examples_flask

./: .gitignore  README.md  flask_app.ini  flask_app.py  pyproject.toml
deploy_flask/: deploy.sh
deploy_nginx/: deploy.sh  flask_app.ini  flasktest  flasktest.ini  gencert_letsencrypt.sh  gencert_selfsign.sh
deploy_uwsgi/: deploy.sh  flask_app.ini  flaskapp.service
linux/: build.sh  flaskapp.service  install.sh
macos/: com.flasksocket.uwsgi.plist  com.flasktest.uwsgi.plist  install.sh  run_ex_uwsgi.sh  test_install.sh
src/: flask_app.py
