[tool.poetry]
name = "webdev_examples_flask"
version = "0.1.0"
description = "Example Flask-based Web-App Tutorial/Reference Project"
authors = ["tommy vegetables <leafyrabbet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
flask = "^2.3.2"
sqlalchemy = "^1.3.17"
pystache = "^0.5.4"
uwsgi = "^2.0.18"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
